// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`issueCreateRuntime — WSP-06 enforcement > Test 4: no explicit workspace + active default → WORKSPACE_REQUIRED_FOR_WRITE BEFORE any SDK call > failure-WSP-06-write-guard 1`] = `
{
  "$apiVersion": "1",
  "error": {
    "code": "WORKSPACE_REQUIRED_FOR_WRITE",
    "details": {
      "remediation": "pass --workspace <name>, set LINEAR_WORKSPACE=<name>, or pass --allow-active-workspace-write",
      "resolvedFrom": "active",
      "resolvedWorkspace": "acme",
    },
    "message": "write commands require an explicit workspace selector: pass --workspace <name>, set LINEAR_WORKSPACE, or pass --allow-active-workspace-write to opt in to using the active default for this invocation",
    "transient": false,
  },
  "meta": {
    "command": "issue create",
  },
  "ok": false,
}
`;

exports[`issueCreateRuntime — minimum input > Test 1: title + team only → resolveTeamId then createIssue with exactly { teamId, title } > create-success-minimum 1`] = `
{
  "data": {
    "assignee": {
      "email": null,
    },
    "id": "22222222-3333-4444-5555-666677778888",
    "identifier": "ENG-1",
    "priority": 0,
    "state": {
      "name": "Backlog",
    },
    "team": {
      "key": "ENG",
    },
    "title": "T",
    "updatedAt": "2026-01-02T00:00:00Z",
  },
  "meta": {
    "workspace": "acme",
    "workspaceSource": "flag",
  },
}
`;

exports[`issueCreateRuntime — required-flag validation (BEFORE any SDK call) > Test 2: missing title → USAGE_ERROR exit 2 BEFORE any SDK call > failure-USAGE_ERROR-missing-title 1`] = `
{
  "$apiVersion": "1",
  "error": {
    "code": "USAGE_ERROR",
    "message": "--title is required",
    "transient": false,
  },
  "meta": {
    "command": "issue create",
  },
  "ok": false,
}
`;
